--- a/Arduino-Alarm/Priorities/PrioritiesView.xaml
+++ b/Arduino-Alarm/Priorities/PrioritiesView.xaml
@@ -38,10 +38,10 @@
                  Width="126"
                  Height="137"
                  Margin="10,60,0,0"
-                 ItemsSource="{Binding List1}"
+                 ItemsSource="{Binding Path=List1}"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
-                 SelectedItem="{Binding ItemSelected}" SelectionMode="Single" SelectionChanged="listBox_SelectionChanged">
+                 SelectedItem="{Binding Path=ItemsSelected, Mode=TwoWay}" SelectionMode="Multiple" >
             <ListBox.Background>
                 <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
                     <GradientStop Offset="0.368" Color="#FF3A1D1D" />
