--- a/Arduino-Alarm/Manual Settings/ManualView.xaml
+++ b/Arduino-Alarm/Manual Settings/ManualView.xaml
@@ -6,55 +6,55 @@
         xmlns:local="clr-namespace:Arduino_Alarm.Manual_Settings"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="Manual Settings"
-        Width="300"
+          Width="400"
         Height="300"
         mc:Ignorable="d">
-    <Grid>
-        <Grid.Background>
-            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                <GradientStop Offset="0.368" Color="#FF3A1D1D" />
-                <GradientStop Offset="1" Color="#FF763232" />
-            </LinearGradientBrush>
-        </Grid.Background>
+    <Grid Background="#FF00527A">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <Label x:Name="label" 
                Content="SET TIME" 
                FontSize="32"
                Foreground="White" 
                HorizontalAlignment="Center" 
-               Margin="0,20,0,0" VerticalAlignment="Top"/>
+               Margin="0,20,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="53" Width="140"/>
         <xctk:MaskedTextBox 
          x:Name="MaskedTextBox"                                
             CaretIndex="0" 
             Mask="00:00"
             Text="{Binding SetTime}"
-            Margin="0,0,0,0" 
-            FontSize="32" Height="48"
+             FontSize="45" Height="62"
             VerticalAlignment="Center"
             HorizontalAlignment="Center"
             TextAlignment="Center"
-            Background="#FFE6D673"
-            BorderBrush="#FFD48E8E" FontFamily="Arial Unicode MS" Foreground="White" BorderThickness="0" Width="80"/>
+            Background="#19FFFFFF"
+            BorderBrush="White" FontFamily="Arial Unicode MS" Foreground="White" BorderThickness="1" Width="116" Grid.ColumnSpan="2"/>
         <Button x:Name="OK" Content="OK" 
                 HorizontalAlignment="Left"
-                Margin="35,206,0,0" 
+                Margin="78,206,0,0" 
                 VerticalAlignment="Top" 
                 Width="108"
                 Height="41" 
-                Background="#FF62E08A"
-                 BorderBrush="#FFD48E8E"
+                Background="#FF2ED5AF"
+                 BorderBrush="Transparent"
                 Foreground="White"
-                BorderThickness="0" 
+                BorderThickness="0"                
+                FontSize="18"
                 Click="OK_Click"/>
         <Button x:Name="Cancel" 
                 Content="Cancel" 
                 HorizontalAlignment="Right" 
-                Margin="0,206,30,0" 
+                Margin="0,206,78,0" 
                 VerticalAlignment="Top" 
+                FontSize="18"
                 Width="108" 
                 Height="41"
                 Background="#FFB155BF"
-                BorderBrush="#FFD48E8E"
+                BorderBrush="Transparent"
                 Foreground="White" 
-                Click="Cancel_Click"/>
+                Click="Cancel_Click" Grid.Column="1"/>
+        <Image Grid.Column="1" HorizontalAlignment="Right" Height="68" Margin="0,8,10,0" VerticalAlignment="Top" Width="72" Source="/Arduino-Alarm;component/Resources/Alarm_Background copy.jpg"/>
     </Grid>
 </Window>
