--- a/Arduino-Alarm/Priorities/PrioritiesView.xaml
+++ b/Arduino-Alarm/Priorities/PrioritiesView.xaml
@@ -5,80 +5,59 @@
         xmlns:local="clr-namespace:Arduino_Alarm"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="Set priorities"
-        Width="300"
-        Height="300"
+        Width="504"
+        Height="350"
         mc:Ignorable="d">
-    <Grid>
-        <Grid.Background>
-            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                <GradientStop Offset="0.368" Color="#FF3A1D1D" />
-                <GradientStop Offset="1" Color="#FF763232" />
-            </LinearGradientBrush>
-        </Grid.Background>
+    <Grid Background="#FF00527A">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="247*"/>
+            <ColumnDefinition Width="249*"/>
+        </Grid.ColumnDefinitions>
         <Button x:Name="OK"
-                Width="126"
-                Margin="10,224,0,0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Background="#FF8B5656"
-                BorderBrush="#FFD48E8E"
+               Width="108"
+                Height="41"
+                 Margin="0,0,136,20"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Background="#FF2ED5AF"
+                BorderBrush="Transparent"
                 BorderThickness="0"
-                Click="OK_Click"
+                FontSize="18"
                 Content="OK"
-                Foreground="White" />
+                Foreground="White" Click="OK_Click" Grid.Column="1" />
         <Button x:Name="Cancel"
-                Width="120"
-                Margin="162,224,0,0"
+                Width="108"
+                Height="41"
+                Margin="139,0,0,20"
                 HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Background="#FF8B5656"
-                BorderBrush="#FFD48E8E"
-                Click="Cancel_Click"
+                VerticalAlignment="Bottom"
+                Background="#FF2ED5AF"
+                BorderBrush="Transparent"
                 Content="Cancel"
-                Foreground="White" />
+                FontSize="18"
+                Foreground="White" Click="Cancel_Click" />
         <ListBox x:Name="listBox"
-                 Width="234"
+                 Width="126"
                  Height="137"
-                 Margin="19,62,0,0"
+                 Margin="175,109,0,0"
+                 ItemsSource="{Binding List1}"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
-                 ItemsSource="{Binding Path=List1}"
-                 SelectionMode="Multiple">
-            <ListBox.Background>
-                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                    <GradientStop Offset="0.368" Color="#FF3A1D1D" />
-                    <GradientStop Offset="1" Color="#FF763232" />
-                </LinearGradientBrush>
-            </ListBox.Background>
-        </ListBox>
-        <ListBox x:Name="listBox_Copy"
-                 Width="120"
-                 Height="137"
-                 Margin="162,60,0,0"
-                 HorizontalAlignment="Left"
-                 VerticalAlignment="Top"
-                 BorderBrush="#FF89A0CB"
-                 SelectedItem="{Binding ItemsSelected2}"
-                 SelectionMode="Multiple"
-                 Visibility="Hidden">
-            <ListBox.Background>
-                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                    <GradientStop Offset="0.368" Color="#FF3A1D1D" />
-                    <GradientStop Offset="1" Color="#FF763232" />
-                </LinearGradientBrush>
-            </ListBox.Background>
-        </ListBox>
+                 SelectionMode="Multiple" Background="{x:Null}" BorderBrush="{x:Null}" Grid.ColumnSpan="2"/>
         <Label x:Name="label"
-               Margin="91,10,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="CHOOSE SUBJECTS"
-               Foreground="White" />
+               Margin="30,20,0,0"
+               FontSize="32"
+               Foreground="White" Grid.ColumnSpan="2"
+ />
         <Label x:Name="label1"
-               Margin="19,36,0,0"
+               Margin="175,78,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
-               Content="Alarm will work twice for choosen subjects"
-               Foreground="White" />
+               Content="Very important subjects"
+               Foreground="White" Grid.ColumnSpan="2" />
+        <Image Grid.Column="1" HorizontalAlignment="Right" Height="51" Margin="0,15,20,0" VerticalAlignment="Top" Width="57" Source="/Arduino-Alarm;component/Resources/alarm2.jpg"/>
     </Grid>
 </Window>
