--- a/Arduino-Alarm/MainWindow.xaml
+++ b/Arduino-Alarm/MainWindow.xaml
@@ -59,7 +59,7 @@
                Margin="26,74,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
-               Content="EASY ALARM"
+               Content="ARDUINO ALARM"
                FontSize="32"
                Foreground="White" />
         <Button x:Name="Manual_Set"
@@ -97,6 +97,6 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
-        <Image HorizontalAlignment="Left" Height="142" Margin="268,27,0,0" VerticalAlignment="Top" Width="140" Source="Resources/Alarm_Background.jpg" Grid.ColumnSpan="2"/>
+        <Image HorizontalAlignment="Left" Height="142" Margin="0,32,0,0" VerticalAlignment="Top" Width="140" Source="Resources/Alarm_Background.jpg" Grid.Column="1"/>
     </Grid>
 </Window>
