--- a/Arduino-Alarm/Priorities/PrioritiesView.xaml
+++ b/Arduino-Alarm/Priorities/PrioritiesView.xaml
@@ -5,53 +5,50 @@
         xmlns:local="clr-namespace:Arduino_Alarm"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="Set priorities"
-        Width="300"
-        Height="300"
+         Width="504"
+        Height="350"
         ResizeMode="NoResize"
         mc:Ignorable="d">
-    <Grid>
-        <Grid.Background>
-            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                <GradientStop Offset="0.368" Color="#FF3A1D1D" />
-                <GradientStop Offset="1" Color="#FF763232" />
-            </LinearGradientBrush>
-        </Grid.Background>
+    <Grid Background="#FF00527A">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <Button x:Name="OK"
-                Width="126"
-                Margin="10,224,0,0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Background="#FF8B5656"
+                Width="108"
+                Height="41"
+               Margin="0,0,0,20"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                 Background="#FF2ED5AF"
                 BorderBrush="#FFD48E8E"
                 BorderThickness="0"
                 Click="OK_Click"
                 Content="OK"
                 Foreground="White" />
         <Button x:Name="Cancel"
-                Width="120"
-                Margin="162,224,0,0"
+                Width="108"
+                Height="41"
+                Margin="9,0,0,20"
                 HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Background="#FF8B5656"
+                VerticalAlignment="Bottom"
+                Background="#FFB155BF"
                 BorderBrush="#FFD48E8E"
                 Click="Cancel_Click"
                 Content="Cancel"
-                Foreground="White" />
+                Foreground="White"  Grid.Column="1" />
         <ListBox x:Name="listBox"
-                 Width="234"
+                 Width="409"
                  Height="137"
-                 Margin="19,62,0,0"
-                 HorizontalAlignment="Left"
-                 VerticalAlignment="Top"
+                 Margin="0,50,0,0"
+                 HorizontalAlignment="Center"
+                 VerticalAlignment="Center"
+                 Background="#19FFFFFF"
+                 Foreground="White"
                  ItemsSource="{Binding Path=List1}"
-                 SelectionMode="Multiple">
-            <ListBox.Background>
-                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                    <GradientStop Offset="0.368" Color="#FF3A1D1D" />
-                    <GradientStop Offset="1" Color="#FF763232" />
-                </LinearGradientBrush>
-            </ListBox.Background>
-        </ListBox>
+                 SelectionMode="Multiple" 
+                 Grid.ColumnSpan="2"/>
+
         <ListBox x:Name="listBox_Copy"
                  Width="120"
                  Height="137"
@@ -61,25 +58,20 @@
                  BorderBrush="#FF89A0CB"
                  SelectedItem="{Binding ItemsSelected2}"
                  SelectionMode="Multiple"
-                 Visibility="Hidden">
-            <ListBox.Background>
-                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                    <GradientStop Offset="0.368" Color="#FF3A1D1D" />
-                    <GradientStop Offset="1" Color="#FF763232" />
-                </LinearGradientBrush>
-            </ListBox.Background>
-        </ListBox>
-        <Label x:Name="label"
-               Margin="91,10,0,0"
+                 Visibility="Hidden" Grid.ColumnSpan="2"/>
+            <Label x:Name="label"
+               Grid.ColumnSpan="2"
+               Margin="30,20,0,10"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="CHOOSE SUBJECTS"
-               Foreground="White" />
+               Foreground="White" 
+               FontSize="32"/>
         <Label x:Name="label1"
-               Margin="19,36,0,0"
+               Margin="139,88,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Alarm will work twice for chosen subjects"
-               Foreground="White" />
+               Foreground="White" Height="26" Width="227" Grid.ColumnSpan="2" />
     </Grid>
 </Window>
